--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
               <div class="carousel-item">
                 <div class="home_content img-2">
                   <div class="content_home">
-                    <h3 class="heading_home">TOURS & TRAVEL</h3>
+                    <h3 class="heading_home">TOURS & TRAVEL jamala also mentally disturbed</h3>
                     <h2 class="heading_lg_home">
                       Let's Discover The World Together
                     </h2>
