--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 >Example@gmail.com
               </p>
               <p class="para_text">
-                <span class="span_text"><i class="fa-solid fa-phone"></i></span
+                <span class="span_text"><i class="fa-solid fa-phonenbhgc,gg"></i></span
                 >‪+91-9876543211‬
               </p>
             </div>
